@@ -84,7 +84,7 @@ public class ImageSetChooserDialog extends JDialog {
         formPanel.setBorderMargin(16);
 
         List<String> options = List.of("Choose a parent node and enter name", "Manual entry");
-        typeChooser = new ComboField<>("Choose:", options, 0);
+        typeChooser = new ComboField<>("Choose:", options, 1);
         typeChooser.addValueChangedListener(field -> {
             if (typeChooser.getSelectedIndex() == 0) {
                 manualEntryLabel.setVisible(false);
@@ -103,21 +103,21 @@ public class ImageSetChooserDialog extends JDialog {
 
         parentTreeField = new PanelField(new BorderLayout());
         parentTreeField.getPanel().setPreferredSize(new Dimension(325, 180));
+        parentTreeField.setVisible(false);
         imageSetTree = new ImageSetTree();
         JScrollPane scrollPane = new JScrollPane(imageSetTree.getTree());
         parentTreeField.getPanel().add(scrollPane, BorderLayout.CENTER);
         formPanel.add(parentTreeField);
 
         nameField = new ShortTextField("Name:", 20);
+        nameField.setVisible(false);
         formPanel.add(nameField);
 
         manualEntryLabel = new LabelField("<html>You can use the / character to create a folder structure.<br>"
                                                   + "Example: folder1/folder2/new image set");
-        manualEntryLabel.setVisible(false);
         formPanel.add(manualEntryLabel);
 
         manualEntryField = new ShortTextField("Path:", 20);
-        manualEntryField.setVisible(false);
         formPanel.add(manualEntryField);
 
         add(formPanel, BorderLayout.CENTER);
